<resources>
    <string name="app_name">JetPacker</string>
    <string name="jet">JetPacker</string>
    <string name="right_arrow">➝</string>
    <string name="welcome">Welcome,</string>
    <string name="awesome">awesome</string>
    <string name="balance">Balance</string>
    <string name="zero_btc">0.0000</string>
    <string name="btc">BTC</string>
    <string name="fund_wallet">Fund Wallet</string>
    <string name="start_your_journey">Start your journey</string>
    <string name="amount_btc">Amount (BTC)</string>
    <string name="_10_000">10,000</string>
    <string name="fixed_amount_helper">Enter the amount you want to fund</string>
    <string name="wallet_funded_successfully">Wallet funded successfully</string>
    <string name="okay">Okay</string>
    <string name="select_spacecraft">Select Spacecraft</string>
    <string name="falcon_1">Falcon 1</string>
    <string name="regular">Regular</string>
    <string name="falcon_9">Falcon 9</string>
    <string name="premium">Premium</string>
    <string name="select_destination">Select Destination</string>
    <string name="moon_to_spook_stations">Moon to spook stations on mars</string>
    <string name="abuja_to_moon">Abuja station to moon</string>
    <string name="mars_to_space">Mars to international space station</string>
    <string name="trip_details">Trip Details</string>
    <string name="enjoy_your_ride">Enjoy your ride!</string>
    <string name="space_craft">Space craft</string>
    <string name="station">Station</string>
    <string name="orbit">Orbit</string>
    <string name="type">Type</string>
    <string name="fair_1">Fair 1</string>
    <string name="fair_2">Fair 2</string>
    <string name="fair_3">Fair 3</string>
    <string name="begin_trip">Begin Trip</string>
    <string name="earth">Earth</string>
    <string name="natural">Natural</string>
    <string name="cross_orbit">Cross from one orbit to another</string>
    <string name="royalty_landing">Royalty when landing on man made satellite</string>
    <string name="journey_2_points">Journey between two points in an orbit</string>
    <string name="two_fifty_btc">BTC 250</string>
    <string name="two_hundred_btc">BTC 200</string>
    <string name="fifty_btc">BTC 50</string>
    <string name="earth_earth">Earth - Earth</string>
    <string name="mars_earth">Mars - Earth</string>
    <string name="manmade">ManMade</string>
    <string name="earth_mass">Earth - Mars</string>
    <string name="empty_wallet">0.00000</string>
    <string name="three_thousand_btc">3,000</string>
    <string name="empty_wallet_text">Empty Wallet</string>
    <string name="fund_wallet_helper">You have to fund your wallet first</string>
</resources>